fixed video on mobile

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -13,12 +13,16 @@ body#index {
     iframe {
       position: absolute;
       z-index: 2;
+      margin: 0;
+      bottom: 0;
+      left: 0;
     }
     a {
       position: absolute;
       z-index: 3;
       margin: 0;
       bottom: 0;
+      left: 0;
       text-decoration: none;
       color: #ecf0f1;
       background-color: #2980b9;
@@ -127,6 +131,12 @@ body#index {
       font-size: 30px !important;
     }
   }
+  .overlay {
+    display: none !important;
+  }
+  .container {
+    visibility: visible !important;
+  }
 }
 
 @media (max-width: 430px) {
@@ -144,6 +154,12 @@ body#index {
         font-size: 18px !important;
       }
     }
+  }
+  .overlay {
+    display: none !important;
+  }
+  .container {
+    visibility: visible !important;
   }
 }
 
